<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/onboarding_boxing_background"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_session_artwork_scrim" />

    <LinearLayout
        android:id="@+id/foregroundContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingBottom="28dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.55" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:letterSpacing="0.18"
            android:text="@string/onboarding_subtitle"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="44dp"
            android:layout_height="3dp"
            android:layout_marginTop="18dp"
            android:background="@color/corner_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/onboarding_supporting_copy"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8" />

        <Button
            android:id="@+id/getStartedButton"
            style="@style/TheCorner.Button.Primary.White"
            android:layout_width="match_parent"
            android:text="@string/onboarding_get_started"
            />
    </LinearLayout>
</FrameLayout>
